[RED] Add and modified tests for DoctorProfile repository